--- a/ZuriLogin/app/src/main/res/values/strings.xml
+++ b/ZuriLogin/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
-    <string name="app_name">ZuriLogin</string>
+    <string name="app_name">Login</string>
     <string name="login">Login</string>
     <string name="access">Access Account</string>
-    <string name="Email">or Login with Email</string>
+    <string name="Email">----or Login with Email----</string>
     <string name="signIn">Sign in</string>
+    <string name="notAccount">Don\'t have an account <b>? </b></string>
+    <string name="signUp"><u>Sign Up</u></string>
 </resources>
